VA-620 fix alignment of summary header which also fixes focus on tip

--- a/css/summary.css
+++ b/css/summary.css
@@ -31,15 +31,24 @@
 }
 
 .h5p-summary .summary-evaluation {
-  overflow: hidden; /* Contain floated counters within the evaluation div */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   margin: var(--h5p-theme-spacing-s) 0;
+  @media (max-width: 576px) {
+    flex-flow: column;
+    align-items: flex-start;
+  }
 }
 
+.summary-evaluation-content-container {
+  flex: 1;
+}
 
 .h5p-summary .summary-evaluation-content {
-  display: block;
+  display: inline-block;
   position: relative;
-  float: left;
+  flex: 1;
   padding: calc(var(--h5p-theme-spacing-s)*0.1) var(--h5p-theme-spacing-l) calc(var(--h5p-theme-spacing-s)*0.1) 0;
   font-size: var(--h5p-theme-font-size-xl);
   color: var(--h5p-theme-text-primary);
@@ -53,6 +62,8 @@
 
 .h5p-summary .summary-evaluation-content > p {
   margin: 0;
+  display: inline-block;
+  width: auto;
 }
 
 .h5p-summary .summary-container li,
@@ -169,7 +180,6 @@
 }
 
 .h5p-summary .summary-score {
-  float: right;
   color: var(--h5p-theme-feedback-incorrect-main);
   background: var(--h5p-theme-feedback-incorrect-secondary);
   -moz-border-radius: var(--h5p-theme-border-radius-small);
@@ -183,6 +193,7 @@
   @media (max-width: 576px) {
     width: 100%;
     margin-bottom: var(--h5p-theme-spacing-s);
+    margin-left: 0;
     box-sizing: border-box;
   } 
 }
@@ -210,7 +221,6 @@
 }
 
 .h5p-summary .summary-progress-numeric {
-  float: right;
   background-color: var(--h5p-theme-feedback-correct-secondary);
   border: 1px solid var(--h5p-theme-feedback-correct-third);
   -moz-border-radius: var(--h5p-theme-border-radius-medium);
@@ -221,10 +231,10 @@
   color: var(--h5p-theme-feedback-correct-main);
   margin-left: calc(var(--h5p-theme-spacing-l)*0.3);
   font-size: var(--h5p-theme-font-size-m);
-   font-weight: 600;
-    @media (max-width: 576px) {
-      width: 100%;
-      box-sizing: border-box;
+  @media (max-width: 576px) {
+    width: 100%;
+    box-sizing: border-box;
+    margin-left: 0;
   } 
 }
 
